# qs.hpp

./: .gitmodules  CMakeLists.txt  README.md  htest.hpp  qs.hpp
examples/: 01-matrix.cpp  01-vector.cpp  02-matmul.cpp  03-array.cpp  10-quadratic.cpp  10-quadratic_grad_decent.cpp  10-quadratic_line_search.cpp  10-quadratic_newton.cpp  11-quadratic_admm.cpp  CMakeLists.txt
tests/: CMakeLists.txt  matrix_test.cpp
