add_executable(matrix01
    01-matrix.cpp
)

add_executable(vector01
    01-vector.cpp
)

add_executable(matmul02
    02-matmul.cpp
)

add_executable(array03
    03-array.cpp
)

add_executable(quadratic_grad_decent10
    10-quadratic_grad_decent.cpp
)

add_executable(quadratic_newton10
    10-quadratic_newton.cpp
)

add_executable(quadratic_line_search10
    10-quadratic_line_search.cpp
)

add_executable(quadratic_admm11
    11-quadratic_admm.cpp
)
